--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,7 @@ requests-oauthlib==1.3.1
 rsa==4.8
 six==1.16.0
 tensorboard==2.8.0
-Python >=3.7,<3.11
+Python ==3.10.9
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
 tensorflow>=2.8.0,<3.0.0
